cambios en teams

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                   <li class="list-group-item">(4) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Sesiones de Drenaje</li>
                 </ul>
-                <a href="https://wa.me/5491173657690/?text=Hola%20estoy%20interesada%20en%20saber%20mas%20del%20Plan%20Reductores" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, estoy interesada en saber mas del Plan Reductores" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -426,7 +426,7 @@
                   <li class="list-group-item">(2) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Meso Anticelulitis</li>
                 </ul>
-                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Reductores%20Anticelulitis" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Reductores Anticelulitis" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -440,7 +440,7 @@
                   <li class="list-group-item">(4) Sesiones de Mio-Up</li>
                   <li class="list-group-item">(2) Sesiones de Meso Anti-Flacidez</li>
                 </ul>
-                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%Tonificador" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Tonificador" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -457,7 +457,7 @@
                   <li class="list-group-item">(1) Altafrecuencia Facial</li>
                   <li class="list-group-item">(1) Mascarilla con Acido Hialuronico</li>
                 </ul>
-                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Limpieza%20Facial" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Limpieza Facial" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -471,7 +471,7 @@
                   <li class="list-group-item">(1) RadioFrecuencia Facial</li>
                   <li class="list-group-item">(1) Meso con Vitamina C</li>
                 </ul>
-                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Facial%20Mesoterapia" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Facial Mesoterapia" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -485,7 +485,7 @@
                   <li class="list-group-item">(1) Plasma Rico en Plaquetas</li>
                   <li class="list-group-item">(1) RadioFrecuencia Facial</li>
                 </ul>
-                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Facial%Plasma" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657818&text=Hola!, me intereza saber mas del Plan Facial Plasma" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -513,7 +513,8 @@
             <h4>Erika Campos</h4>
             <span>Esteticista Profesional</span>
             <p>
-              Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+              Especialista años de experiencia en el uso de distintos equipos de aparatología destinado en el tratamiento en la 
+              reducción de adiposidad, celulitis, moldeado corporal, eliminación de vello corporal y entre otros. 
             </p>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
@@ -529,7 +530,8 @@
             <h4>Jessica Lopez</h4>
             <span>Cosmetologa</span>
             <p>
-              Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+              Profesional con alta experiencia en el cuidado estético de rostro y corporal. Combinando distintos tratamientos 
+              que ayudara tener la piel limpia, suave, radiante y mucho más firme y joven.
             </p>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
@@ -545,7 +547,8 @@
             <h4>Jennifer Perez</h4>
             <span>Cosmiatra</span>
             <p>
-              Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+              Graduada y con experiencia en el tratado de la piel. se especializa en tratar imperfecciones de la piel, manchas, acné, arrugas y 
+              entre otros. Donde se hace uso de productos y procedimientos rejuvenecedores con resultados impresionantes.
             </p>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
@@ -606,17 +609,17 @@
         <form action="/forms/contact.php" method="post" role="form" class="php-email-form">
           <div class="row">
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+              <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
             </div>
             <div class="col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+              <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
             </div>
           </div>
           <div class="form-group mt-3">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+            <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
           </div>
           <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+            <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
           </div>
           <div class="text-center"><button type="submit">Enviar mensaje</button></div>
         </form>
