--- a/page_error404.html
+++ b/page_error404.html
@@ -100,7 +100,7 @@
                             <img src="assets/img/opps/no-found.webp" alt="">
                             <h3 class="texto">404 - PÁGINA NO ENCONTRADA</h3>
                             <p>La página que está buscando podría estar eliminada o no estar disponible temporalmente</p>
-                            <button><a href="#">IR AL INICIO</a> </button>
+                            <button class="incio"><a href="#">IR AL INICIO</a> </button>
                     </div>
                 </div>
         </div>
