se corrige ortografia y se agrega formulario a cada uno de los servicios

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
                                 <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
                                 <li><a href="tratamiento-mesoterapia.html">Mesoterapia</a></li>
-                                <li><a href="tratamiento-velashape.htm">Velashape</a></li> 
+                                <li><a href="tratamiento-velashape.html">Velashape</a></li> 
                                 <li><a href="tratamiento-radiofrecuencia.html">Radiofrecuencia Corporal</a></li> 
                                 <li><a href="tratamiento-mio-up.html">Mio-Up</a></li> 
                             </ul>
@@ -161,25 +161,26 @@
 
         <div class="nosotros-icon col-xl-5 col-lg-6 d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
           <h4>Mari Beauty Clinic Tratamientos Esteticos</h4>
-          <p>Somos un Centro Estético especializados en tratamientos faciales regenerativos, antiage, manchas, imperfecciones, en otros y, Corporales contando con las mejores técnicas y tecnología en 
-            aparatología para reducir medidas, combatir la flacidez, atenua estrías, esculpir gluteos entre otros </p>
+          <p>Somos un Centro Estético especializados en tratamientos faciales regenerativos, antiage, manchas e imperfecciones. 
+            Contamos con numerables procedimientos corporales para combatir la flacidez, las estrías, la grasa corporal y el vello no deseado.  
+            Valiéndonos del uso de las mejores técnicas y tecnología en aparatología de vanguardia en los distintos métodos de belleza.</p>
 
           <div class="icon-box">
             <div class="icon"><i class="bx bx-spa"></i></div>
             <h4 class="title"><a href="">Ciudado</a></h4>
-            <p class="nosotros-descrip">Somos Experto en el cuidado de la piel</p>
+            <p class="nosotros-descrip">Somos Experto en el cuidado de la piel.</p>
           </div>
 
           <div class="icon-box">
             <div class="icon"><i class="bx bxs-paste"></i></div>
             <h4 class="title"><a href="">Consultas</a></h4>
-            <p class="nosotros-descrip">Brindamos un diagnóstico de acuerdo a las necesidades estéticas que quieres llegar poseer</p>
+            <p class="nosotros-descrip">Brindamos un diagnóstico de acuerdo a las necesidades estéticas que quieres llegar poseer.</p>
           </div>
 
           <div class="icon-box">
             <div class="icon"><i class="bx bx-crown"></i></div>
             <h4 class="title"><a href="">Equipamento </a></h4>
-            <p class="nosotros-descrip">Nuestro equipamento de vanguardia cuenta con las ultimas tecnología para el tratamientos estéticos</p>
+            <p class="nosotros-descrip">Nuestro equipamiento de vanguardia cuenta con las ultimas tecnología en tratamientos estéticos.</p>
           </div>
         </div>
       </div>
@@ -204,7 +205,7 @@
           <li data-filter="*" class="filter-active">Todos</li>
           <li data-filter=".filter-facial">Facial</li>
           <li data-filter=".filter-corporal">Corporal</li>
-          <li data-filter=".filter-gluteos">Gluteos</li>
+          <li data-filter=".filter-gluteos">Glúteos</li>
         </ul>
       </div>
     </div>
@@ -215,7 +216,7 @@
         <div class="portfolio-wrap">
           <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" class="rounded img-fluid" alt="imagenes criolipolisis">
           <div class="portfolio-info">
-            <h4>Criolipolisis</h4>
+            <h4>Criolipólisis</h4>
             <p>Tratamiento reductor de grasa adiposa</p>
             <div class="portfolio-links">
               <a href="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
@@ -244,7 +245,7 @@
           <img src="assets/img/Depilaser/depilacion-lase-definitiva.jpg" class="rounded img-fluid" alt="imagen Depilaser">
           <div class="portfolio-info">
             <h4>Depilaser</h4>
-            <p>Eliminar vello en distintas zonas</p>
+            <p>Eliminar vello en distintas zonas corporales</p>
             <div class="portfolio-links">
               <a href="assets/img/Depilaser/depilacion-lase-definitiva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-depilaser.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -300,7 +301,7 @@
           <img src="assets/img/limpieza-facial/limpieza-facial.jpg" class="rounded img-fluid" alt="imagen Limpieza Facial">
           <div class="portfolio-info">
             <h4>Limpieza Facial</h4>
-            <p>Limpieza y tratamiento rejuvenecedor </p>
+            <p>Limpieza y tratamiento rejuvenecedor</p>
             <div class="portfolio-links">
               <a href="assets/img/limpieza-facial/limpieza-facial.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-limpieza-facial.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -342,7 +343,7 @@
           <img src="assets/img/velashape/Velashape-mari-beauty-clinic.jpg" class="rounded img-fluid" alt="Imagen Velashape">
           <div class="portfolio-info">
             <h4>Velashape</h4>
-            <p>Reducir el contorno corporal y la celulitis</p>
+            <p>Reducir medidas en el contorno corporal y la celulitis</p>
             <div class="portfolio-links">
               <a href="assets/img/velashape/Velashape-mari-beauty-clinic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-velashape.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -394,8 +395,8 @@
         <div class="section-title">
           <span>Paquetes</span>
           <h4>Paquetes</h4>
-          <p>Contamos para vos las mejores combinaciones de tratamientos estéticos, contáctanos y adquiera uno de nuestros paquetes 
-            exclusivos con hasta un 15% descuentos en cada una de las terapias</p>
+          <p>Contamos para vos las mejores combinaciones de tratamientos estéticos. Contáctanos y adquiera uno de nuestros paquetes 
+            exclusivos con hasta un 15% descuentos en cada una de las terapias.</p>
         </div>
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -410,7 +411,7 @@
                   <li class="list-group-item">(4) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Sesiones de Drenaje</li>
                 </ul>
-                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, estoy interesada en saber mas del Plan Reductores" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=HHola!, me interesa en saber más del Plan Reductores" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -422,11 +423,11 @@
                 <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">(4) Sesiones HimFu</li>
-                  <li class="list-group-item">(2) Sesiones de RadioFrecuencia Combinada</li>
+                  <li class="list-group-item">(2) Sesiones de Radiofrecuencia Combinada</li>
                   <li class="list-group-item">(2) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Meso Anticelulitis</li>
                 </ul>
-                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Reductores Anticelulitis" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me interesa saber más del Plan Reductores Anticelulitis" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -436,11 +437,11 @@
               <div class="card-body">
                 <h5 class="card-title">Plan Tonificador</h5>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">(4) Sesiones de RadioFrecuencia Corporal</li>
+                  <li class="list-group-item">(4) Sesiones de Radiofrecuencia Corporal</li>
                   <li class="list-group-item">(4) Sesiones de Mio-Up</li>
                   <li class="list-group-item">(2) Sesiones de Meso Anti-Flacidez</li>
                 </ul>
-                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Tonificador" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me interesa saber más del Plan Tonificador" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -452,12 +453,12 @@
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">(1) Exfoliación</li>
                   <li class="list-group-item">(1) Vapor Ozono</li>
-                  <li class="list-group-item">(1) MicroDermoabración</li>
+                  <li class="list-group-item">(1) Microdermoabrasión</li>
                   <li class="list-group-item">(1) Extración</li>
                   <li class="list-group-item">(1) Altafrecuencia Facial</li>
-                  <li class="list-group-item">(1) Mascarilla con Acido Hialuronico</li>
+                  <li class="list-group-item">(1) Mascarilla con Ácido Hialuronico</li>
                 </ul>
-                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Limpieza Facial" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me interesa saber más del Plan Limpieza Facial" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -468,10 +469,10 @@
                 <h5 class="card-title">Plan Facial Mesoterapia</h5>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">(1) Mesotensive</li>
-                  <li class="list-group-item">(1) RadioFrecuencia Facial</li>
+                  <li class="list-group-item">(1) Radiofrecuencia Facial</li>
                   <li class="list-group-item">(1) Meso con Vitamina C</li>
                 </ul>
-                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me intereza saber mas del Plan Facial Mesoterapia" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657690&text=Hola!, me interesa saber más del Plan Facial Mesoterapia" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -483,9 +484,9 @@
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">(1) Dermapen</li>
                   <li class="list-group-item">(1) Plasma Rico en Plaquetas</li>
-                  <li class="list-group-item">(1) RadioFrecuencia Facial</li>
+                  <li class="list-group-item">(1) Radiofrecuencia Facial</li>
                 </ul>
-                <a href="https://api.whatsapp.com/send?phone=5491173657818&text=Hola!, me intereza saber mas del Plan Facial Plasma" class="btn btn-primary" target="_blank">Reservar</a>
+                <a href="https://api.whatsapp.com/send?phone=5491173657818&text=Hola!, me interesa saber más del Plan Facial Plasma" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -513,7 +514,7 @@
             <h4>Erika Campos</h4>
             <span>Esteticista Profesional</span>
             <p>
-              Especialista años de experiencia en el uso de distintos equipos de aparatología destinado en el tratamiento en la 
+              Especialista con años de experiencia en el uso de distintos equipos de aparatología destinado en el tratamiento en la 
               reducción de adiposidad, celulitis, moldeado corporal, eliminación de vello corporal y entre otros. 
             </p>
             <div class="social">
@@ -530,8 +531,8 @@
             <h4>Jessica Lopez</h4>
             <span>Cosmetologa</span>
             <p>
-              Profesional con alta experiencia en el cuidado estético de rostro y corporal. Combinando distintos tratamientos 
-              que ayudara tener la piel limpia, suave, radiante y mucho más firme y joven.
+              Profesional con alta experiencia en el cuidado estético del rostro y el cuerpo. Combinando distintos tratamientos 
+              que ayudara tener la piel más limpia, suave, radiante y mucho más firme y joven.
             </p>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
@@ -547,8 +548,8 @@
             <h4>Jennifer Perez</h4>
             <span>Cosmiatra</span>
             <p>
-              Graduada y con experiencia en el tratado de la piel. se especializa en tratar imperfecciones de la piel, manchas, acné, arrugas y 
-              entre otros. Donde se hace uso de productos y procedimientos rejuvenecedores con resultados impresionantes.
+              Graduada y con experiencia en el tratado de la piel. se especializa en tratar imperfecciones de la piel, manchas, acné y arrugas. 
+              haciendo uso de productos y procedimientos rejuvenecedores con resultados impresionantes.
             </p>
             <div class="social">
               <a href=""><i class="bi bi-twitter"></i></a>
@@ -571,7 +572,7 @@
     <div class="section-title">
       <span>Contacto</span>
       <h4>Contacto</h4>
-      <p>Queremos conocerte, por eso nos puede ubicar y contactar en la siguiente información para pedir un turno previo</p>
+      <p>Queremos conocerte, por eso nos puede ubicar y contactar en la siguiente información para solicitar un turno</p>
     </div>
 
     <div>
@@ -585,7 +586,7 @@
           <div class="address">
             <i class="bi bi-geo-alt"></i>
             <h4>Dirección:</h4>
-            <p>Av 3040 de monroe</p>
+            <p>Av Monroe 1800</p>
           </div>
 
           <div class="email">
@@ -611,7 +612,13 @@
             <div class="col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
             </div>
-            <div class="col-md-6 form-group mt-3 mt-md-0">
+            <div class="col-md-6 form-group">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Apellido" required>
+            </div>
+            <div class="col-md-6 form-group mt-2">
+              <input type="number" name="name" class="form-control" id="name" placeholder="Teléfono" required>
+            </div>
+            <div class="col-md-6 form-group mt-2">
               <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
             </div>
           </div>
