--- a/index.html
+++ b/index.html
@@ -613,10 +613,10 @@
               <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
             </div>
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Apellido" required>
+              <input type="text" name="apellido" class="form-control" id="apellido" placeholder="Apellido" required>
             </div>
             <div class="col-md-6 form-group mt-2">
-              <input type="number" name="name" class="form-control" id="name" placeholder="Teléfono" required>
+              <input type="number" name="telefono" class="form-control" id="telefono" placeholder="Teléfono" required>
             </div>
             <div class="col-md-6 form-group mt-2">
               <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
