cambios en todas las paginas de servicios y con opcion de formulario

--- a/pagina-interna.html
+++ b/pagina-interna.html
@@ -94,7 +94,7 @@
                                   <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
                                   <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
                                   <li><a href="tratamiento-mesoterapia.html">Mesoterapia</a></li>
-                                  <li><a href="tratamiento-velashape.htm">Velashape</a></li> 
+                                  <li><a href="tratamiento-velashape.html">Velashape</a></li> 
                                   <li><a href="tratamiento-radiofrecuencia.html">Radiofrecuencia Corporal</a></li> 
                                   <li><a href="tratamiento-mio-up.html">Mio-Up</a></li> 
                                 </ul>
