mas cambios de rutas

--- a/page_error404.html
+++ b/page_error404.html
@@ -34,10 +34,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!-- CSS vendor Bootstrap y otros -->
-    <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="/assets/css/page_error404.css">
+    <!-- <link rel="stylesheet" href="assets/css/page_error404.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -100,7 +100,7 @@
                             <img src="assets/img/opps/no-found.webp" alt="">
                             <h3 class="texto">404 - PÁGINA NO ENCONTRADA</h3>
                             <p>La página que está buscando podría estar eliminada o no estar disponible temporalmente</p>
-                            <button class="incio"><a href="#">IR AL INICIO</a> </button>
+                            <button class="inicio"><a href="#">IR AL INICIO</a> </button>
                     </div>
                 </div>
         </div>
@@ -111,7 +111,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 <!-- Archive JS vendor -->
-<script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
 <!-- Templay main archivo JS-->
 <script src="assets/js/main.js"></script>
