probando pagina de error 404

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             <li><i class="bx bx-chevron-right"></i> <a href="#servicios">Servicios</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#paquetes">Paquetes</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#team">Equipos</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Política de Privacidad</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="">Política de Privacidad</a></li>
           </ul>
         </div>
 
