se arregla mas errores de rutas

--- a/404.html
+++ b/404.html
@@ -96,10 +96,10 @@
                 <div class="row col-lg-12 col-md-12 d-flex justify-content-center align-items-center flex-column">
                     <div class="no-found">
                             <!-- <h1>Oops!</h1> -->
-                            <img src="assets/img/opps/no-found.webp" alt="">
+                            <img src="assets/img/opps/no-found.webp" alt="imagen_page_error 404">
                             <h3 class="texto">404 - PÁGINA NO ENCONTRADA</h3>
                             <p>La página que está buscando podría estar eliminada o no estar disponible temporalmente</p>
-                            <button class="inicio"><a href="#">IR AL INICIO</a> </button>
+                            <button class="inicio"><a href="index.html">IR AL INICIO</a> </button>
                     </div>
                 </div>
         </div>
