--- a/pagina-interna.html
+++ b/pagina-interna.html
@@ -192,7 +192,7 @@
                 <li><i class="bx bx-chevron-right"></i> <a href="index.html#servicios">Servicios</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="index.html#paquetes">Paquetes</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="index.html#team">Equipos</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Política de Privacidad</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="404.html">Política de Privacidad</a></li>
               </ul>
             </div>
     
