--- a/tratamiento-velashape.html
+++ b/tratamiento-velashape.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="estetica y belleza">
     <!-- Meta Tags -->
-    <!-- <meta name="description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como por ejemplo: la reducción de grasa adiposa con criolipolisis, eliminación de vello con laser IPL o soprano, bótox, himfu para el moldeado del cuerpo, tratamiento faciales rejuvenecedores y mucho más."> -->
     <meta name="description" content="Empresa especializada en el uso de los ultimos tratamientos estéticos y técnicas de belleza para tratar la grasa adiposa, flacidez, arrugas, vello y mucho más.">
     <meta name="keywords" content="Criolipolisis, depilaser, botox, himfu, lifting, dermapen, limpieza facial, exfoliación, plasma, mesolifting, velaslim, radiofrecuencia, velashape">
     <!-- Titulo de la Pagina -->
@@ -318,7 +317,7 @@
                 <li><i class="bx bx-chevron-right"></i> <a href="index.html#servicios">Servicios</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="index.html#paquetes">Paquetes</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="index.html#team">Equipos</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Política de Privacidad</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="404.html">Política de Privacidad</a></li>
               </ul>
             </div>
     
