--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <ul>
                 <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                 <li><a class="nav-link scrollto" href="#nosotros">Nosotros</a></li>
-                <li class="dropdown"><a class="navbar-link scrollto" href="#portfolio"><span>Servicios</span><i class="bx bxs-chevron-down js-arrow arrow w"></i></i></a>
+                <li class="dropdown"><a class="navbar-link scrollto" href="#"><span>Servicios</span><i class="bx bxs-chevron-down js-arrow arrow"></i></i></a>
                     <ul>
                         <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                             <ul>
@@ -723,6 +723,7 @@
 <!-- Archive JS vendor -->
 <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
 <!-- Templay main archivo JS-->
 <script src="assets/js/main.js"></script>
