--- a/tratamiento-endopeel.html
+++ b/tratamiento-endopeel.html
@@ -76,7 +76,7 @@
                 <ul>
                     <li><a class="nav-link scrollto" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="index.html#nosotros">Nosotros</a></li>
-                    <li class="dropdown"><a class="navbar-link active" href="index.html#servicios"><span>Servicios</span><i class="bx bxs-chevron-down js-arrow arrow w"></i></i></a>
+                    <li class="dropdown"><a class="navbar-link active" href="#"><span>Servicios</span><i class="bx bxs-chevron-down js-arrow arrow w"></i></i></a>
                         <ul>
                             <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                                 <ul>
